[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "revpiepics"
version = "0.2.0"
description = "EPICS interface for Revolution Pi IOs"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Xavier Goiziou"},
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
]

dependencies = [
  "softioc>=4.6.1",
  "revpimodio2>=2.8.0"
]

[project.urls]
Homepage = "https://github.com/XavSPM/RevpiEpics"
Repository = "https://github.com/XavSPM/RevpiEpics"
